--- a/example.env
+++ b/example.env
@@ -1,3 +1,3 @@
 DB_USER=postgres
-DB_PASSWORD=testpassword
+DB_PASSWORD=postgres
 RPC_URL=https://eth-mainnet.g.alchemy.com/v2/kQdX_gHLisdzWjm0fwkdalwödajfuj
